--- a/homework004_/app/src/main/AndroidManifest.xml
+++ b/homework004_/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SQLiteWriteActivity"></activity>
         <activity android:name=".LoginForgetActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
